# selik_app

./: README.md  pyproject.toml
selikapp/: manage.py
selikapp/re_agent_app/: admin.py  apps.py  constants.py  forms.py  models.py  signals.py  urls.py  views.py  widgets.py
selikapp/re_agent_app/migrations/: 0001_initial.py  0002_rename_titre_bien_bien_adresse_and_more.py
selikapp/re_agent_app/statics/re_agent_app/css/: base.css  filters_1.css
selikapp/re_agent_app/templates/re_agent_app/: base.html  index.html  search_property.html
selikapp/re_agent_app/templates/re_agent_app/forms/: bien_form.html  contact_form.html
selikapp/selikapp/: asgi.py  settings.py  urls.py  wsgi.py
