[tool.poetry]
name = "selika app"
version = "0.1.0"
description = ""
authors = ["JT15BR <julien.thomas@tisson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.8"
pillow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
